--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Reked
 logo: "images/logo.svg" # You can add own logo image.
 description: Minimalistic Theme for Jekyll
-baseurl: "" # The subpath of your site, e.g. /blog
-url: "https://aletcher.github.io/blog_reked" # The base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog_reked" # The subpath of your site, e.g. /blog
+url: "" # The base hostname & protocol for your site, e.g. http://example.com
 
 # Author Settings
 author:
