--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,36 @@
-title: Reked
-logo: "images/logo.svg" # You can add own logo image.
-description: Minimalistic Theme for Jekyll
+title: Riding the Ridge
+logo: # You can add own logo image.
+description: Alec Letcher's Blog
 baseurl: "/blog_reked" # The subpath of your site, e.g. /blog
 url: "" # The base hostname & protocol for your site, e.g. http://example.com
 
 # Author Settings
 author:
-  name: Sasha Levi
-  bio: Hi, my name is Sasha Levi. I like being at the center of events, being free and enjoying every moment. Thank you for visiting my blog.
+  name: Alec Letcher
+  bio: Hello. I'm Alec. Thanks for visiting my blog :)
 
 # Contact links
-twitter: https://twitter.com/ # Add your Twitter handle
-facebook: https://facebook.com/ # Add your Facebook handle
-dribbble: https://dribbble.com/ # Add your Dribbble handle
-instagram: https://instagram.com/ # Add your Instagram handle
-pinterest: https://pinterest.com/ # Add your Pinterest handle
-email: forexample@website.com # Add your Email address
+# twitter: https://twitter.com/ # Add your Twitter handle
+# facebook: https://facebook.com/ # Add your Facebook handle
+# dribbble: https://dribbble.com/ # Add your Dribbble handle
+# instagram: https://instagram.com/ # Add your Instagram handle
+# pinterest: https://pinterest.com/ # Add your Pinterest handle
+# email: # Add your Email address
 
 # Hero Section
 hero: true # To enable the section hero, use the value true. To turn off use the value false.
-hero-title: Raked Minimalistic Theme # Add your hero title
-hero-subtitle: For those who love simplicity # Add your hero subtitle
-hero-image: images/14.jpg # Add background image in section hero
+hero-title: Riding the Ridge # Add your hero title
+hero-subtitle: Alec Letcher's Blog # Add your hero subtitle
+hero-image: images/ridge4.webp # Add background image in section hero
+# hero-image: images/ridge2.jpg # Add background image in section hero
+
 
 # Footer
-footer-image: images/14.jpg # Add background image in footer
+footer: false
+footer-image: images/spongebob.gif # Add background image in footer
 
 # Comment Section (Disqus)
-disqus-identifier: mr-brown # Add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier: ridingtheridge # Add your shortname for Disqus Comment. For example mr-brown
 
 # Google Analytics
 google-analytics: "" # Add your identifier. For example UA-99631805-1.
