Second post, dance section, hero subtitle etc

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,10 @@ author:
 # Hero Section
 hero: true # To enable the section hero, use the value true. To turn off use the value false.
 hero-title: Riding the Ridge # Add your hero title
-hero-subtitle: Alec's Blog # Add your hero subtitle
+hero-subtitle: A little experiment in holding opposite ideas together.
+# To find commonality, instead of further polarising society. To marvel at both sides of the ridge with an eagle's eye.
+# hero-subtitle: The attempt of a little being to hold opposite ideas together.
+# <br> An attempt to push-back against polarisation.
 hero-image: images/ridge3.webp # Add background image in section hero
 # hero-image: images/ridgejustify2.jpg # Add background image in section hero
 
