--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author:
 # Hero Section
 hero: true # To enable the section hero, use the value true. To turn off use the value false.
 hero-title: Riding the Ridge # Add your hero title
-hero-subtitle: A Blog Experiment. # An experiment against polarisation.
+hero-subtitle: A blog experiment. # An experiment against polarisation.
 hero-image: images/ridge3.webp # Add background image in section hero
 
 # Footer
